[package]
name = "bp5758d"
authors = ["Shreyash Bubane <bubaneshreyash3@gmail.com>"]
version = "0.1.0"
description = "Pure Rust implementation of BP5758D LED Driver"
repository = "https://github.com/shreyash-b/bp5758d"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = { version = "1.0.0", default-features = false }
log = { version = "0.4.22", default-features = false, optional = true }
thiserror = { version = "2.0.9", default-features = false }

[features]
default = []
log = ["dep:log"]
